# ADTierModel-Rust

./: .gitignore  ADMIN-ACCOUNT-MANAGEMENT.md  ADTierModel.psd1  ADTierModel.psm1  CUsersAdministratorDesktopbuild-output2.txt  FORMAL-MODEL.md  LOGON-RESTRICTIONS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
Markdown docs/: FORMAL-MODEL.md
specs/: ADTierModel.cfg  ADTierModel.tla  ADTierModel_ACL.als
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/commands/: compliance.rs  endpoint_protection.rs  gpo.rs  mod.rs  tier_management.rs
src-tauri/src/domain/: ad_objects.rs  compliance.rs  initialization.rs  mod.rs  tier.rs
src-tauri/src/infrastructure/: ad_connection.rs  ad_search.rs  ad_write.rs  compliance_check.rs  connection.rs  endpoint_protection.rs  gpo_management.rs  mod.rs
src/components/admin/: CreateAdminWizard.tsx  index.ts
src/components/audit/: AuditLogPanel.tsx  index.ts
src/components/compliance/: ComplianceDashboard.tsx  ComplianceTrendChart.tsx  index.ts
src/components/dashboard/: DashboardOverview.tsx
src/components/endpoint-protection/: index.ts  (+1 more)
src/hooks/: useTierData.ts
src/services/: export.ts  exportService.ts  reportGenerator.ts
src/store/: auditStore.ts  complianceHistoryStore.ts  notificationStore.ts  settingsStore.ts  tierStore.ts
src/types/: endpointProtection.ts  tier.ts
(+22 files in other folders)
